--- a/framework.html
+++ b/framework.html
@@ -164,17 +164,20 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="framework">Framework</h1>
+<h1 id="framework"><strong>Framework</strong></h1>
 <p>For code visit: <a href="https://github.com/mentorship-guidance/fire_group_energy_efficiency_etl">github</a>.</p>
 <p>Mentors : <code>Zidane Sunesara</code>, <code>Pradeep Savalsa</code>, <code>Suroor Aga</code></p>
 <p>Mentees : <code>Tanishq Harchandani</code>, <code>Manali Bhave</code></p>
-<h2 id="project-flow">Project Flow</h2>
+<hr />
+<h2 id="project-flow"><strong>Project Flow</strong></h2>
 <p>Here is the project flow diagram that illustrates how the different components of the project interact during the ETL process:</p>
 <p><img alt="Project Flow Diagram" src="https://github.com/tanishq-h/repo/blob/b2/images/project-flow.png?raw=true" /></p>
-<h2 id="project-architecture">Project Architecture</h2>
+<hr />
+<h2 id="project-architecture"><strong>Project Architecture</strong></h2>
 <p>The project follows a modular architecture, where each component is responsible for specific tasks in the ETL (Extract, Transform, Load) process.</p>
 <p><img alt="Project Architecture" src="https://github.com/tanishq-h/repo/blob/b2/images/project-architecture.png?raw=true" /></p>
-<h2 id="project-structure">Project Structure</h2>
+<hr />
+<h2 id="project-structure"><strong>Project Structure</strong></h2>
 <h2 id="1-configs">1. <code>Configs/</code></h2>
 <p>This directory contains JSON configuration files, which define various parameters used throughout the ETL process.
 <strong><code>my-project/docs/configs/hourly_generation_by_energy_source.md</code></strong></p>
