--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="welcome-to-energy-efficiency-etl-documentation">Welcome to Energy Efficiency ETL Documentation</h1>
+<h1 id="welcome-to-energy-efficiency-etl-documentation"><strong>Welcome to Energy Efficiency ETL Documentation</strong></h1>
 <p>This documentation provides an overview of the Energy Efficiency ETL framework, designed to facilitate the extraction, transformation, and loading of energy data from external APIs into a target database.</p>
-<h2 id="table-of-contents">Table of Contents</h2>
+<h2 id="table-of-contents"><strong>Table of Contents</strong></h2>
 <ul>
 <li><a href="framework.html">Framework Overview</a></li>
-<li><a href="http://127.0.0.1:8000/my-project/docs/configs#">Configuration Files</a></li>
-<li><a href="">Data Fetching</a></li>
-<li><a href="">Data Ingestion</a></li>
+<li><a href="configs/hourly_generation_by_energy_source.html">Configuration Files</a></li>
+<li><a href="fetch/provider/EIA.html">Data Fetching</a></li>
+<li><a href="ingest/provider/xata.html">Data Ingestion</a></li>
 <li><a href="main.html">Main Logic</a></li>
 <li><a href="utils.html">Utility Functions</a></li>
 </ul></div>
