--- a/ingest/provider/xata.html
+++ b/ingest/provider/xata.html
@@ -140,37 +140,37 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="xata-ingest-and-ingest-class-manager-documentation">Xata Ingest and Ingest Class Manager Documentation</h1>
-<h2 id="overview">Overview</h2>
+<h1 id="xata-ingest-and-ingest-class-manager-documentation"><strong>Xata Ingest and Ingest Class Manager Documentation</strong></h1>
+<h2 id="overview"><strong>Overview</strong></h2>
 <p>This documentation provides an overview of the <code>XataIngest</code> class and the <code>IngestClassManager</code> class, which are used for data ingestion into a XATA database using configuration files and pandas DataFrames. The <code>IngestClassManager</code> acts as a manager for different ingesting classes.</p>
-<h2 id="classes">Classes</h2>
+<h2 id="classes"><strong>Classes</strong></h2>
 <h3 id="1-ingestclassmanager">1. <code>IngestClassManager</code></h3>
 <p>The <code>IngestClassManager</code> is responsible for managing the ingestion process. It allows for easy extension to include multiple ingesting classes.</p>
-<h4 id="initialization">Initialization</h4>
+<h4 id="initialization"><strong>Initialization</strong></h4>
 <p><code>def __init__(self, config_path: str):</code>
 Initializes  the IngestClassManager with a specified configuration path and a mapping of available ingesting classes.</p>
-<h4 id="mapping">Mapping</h4>
+<h4 id="mapping"><strong>Mapping</strong></h4>
 <p><code>self.ingesters = {'Xata': XataIngest}</code>:
 Maps the target for ingestion with the corresponding ingester class.</p>
-<h4 id="method-ingest_data">Method: ingest_data()</h4>
+<h4 id="method-ingest_data"><strong>Method: ingest_data()</strong></h4>
 <p><code>def ingest_data(self, df: pd.DataFrame, target: str):</code>This method ingests data using the specified target.</p>
-<h5 id="arguments">Arguments:</h5>
+<h5 id="arguments"><strong>Arguments:</strong></h5>
 <p><code>df</code>: The DataFrame containing data to be ingested.</p>
 <p><code>target</code>: The target for data ingestion (e.g., "Xata").</p>
-<h5 id="description">Description:</h5>
+<h5 id="description"><strong>Description:</strong></h5>
 <p>Looks up the appropriate ingester class based on the provided target name.
 If the target is not found, it logs an error and raises an exception.
 Creates an instance of the selected ingester class, passing the configuration path and DataFrame.
 Calls the ingest_data method of the ingester instance to perform the actual data ingestion.</p>
 <h3 id="2-xataingest">2. <code>XataIngest</code></h3>
 <p>The <code>XataIngest</code> class is designed to handle data ingestion into a XATA database.</p>
-<h4 id="initialization_1">Initialization</h4>
+<h4 id="initialization_1"><strong>Initialization</strong></h4>
 <p><code>def __init__(self, config_path: str, df: pd.DataFrame):</code>
 Initializes  the XataIngest with a specified configuration path and DataFrame containing data to be ingested.</p>
-<h4 id="method-ingest_data_1">Method: ingest_data()</h4>
+<h4 id="method-ingest_data_1"><strong>Method: ingest_data()</strong></h4>
 <p><code>def ingest_data(self):</code>
 Ingests data into the specified database table.</p>
-<h5 id="description_1">Description</h5>
+<h5 id="description_1"><strong>Description</strong></h5>
 <ul>
 <li>Establishes a connection to the XATA database using the DSN.</li>
 <li>Converts the DataFrame into a list of records.</li>
@@ -179,7 +179,7 @@ Ingests data into the specified database table.</p>
 <li>Commits the transaction if successful; rolls back if an error occurs.</li>
 <li>Closes the database connection and logs the outcome.</li>
 </ul>
-<h5 id="logging">Logging:</h5>
+<h5 id="logging"><strong>Logging:</strong></h5>
 <ul>
 <li>Logs the number of records inserted on success.</li>
 <li>Logs errors that occur during the insertion process.</li>
