--- a/fetch/provider/EIA.html
+++ b/fetch/provider/EIA.html
@@ -140,35 +140,35 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="eia-data-fetcher-and-provider-class-manager-documentation">EIA Data Fetcher and Provider Class Manager Documentation</h1>
-<h2 id="overview">Overview</h2>
+<h1 id="eia-data-fetcher-and-provider-class-manager-documentation"><strong>EIA Data Fetcher and Provider Class Manager Documentation</strong></h1>
+<h2 id="overview"><strong>Overview</strong></h2>
 <p>This documentation provides an overview of the <code>ProviderClassManager</code> and <code>EIADataFetcher</code> classes, which are responsible for fetching energy data from the EIA API. The <code>ProviderClassManager</code> manages different data provider classes and orchestrates the data retrieval process..</p>
-<h2 id="classes">Classes</h2>
+<h2 id="classes"><strong>Classes</strong></h2>
 <h3 id="1-providerclassmanager">1. <code>ProviderClassManager</code></h3>
 <p>The <code>ProviderClassManager</code> is responsible for managing the data fetching process from various providers.</p>
-<h4 id="initialization">Initialization</h4>
+<h4 id="initialization"><strong>Initialization</strong></h4>
 <p><code>def __init__(self, config_path: str):</code>
 Initializes the ProviderClassManager with a specified configuration path and a mapping of available data provider classes.</p>
-<h4 id="mapping">Mapping</h4>
+<h4 id="mapping"><strong>Mapping</strong></h4>
 <p><code>self.providers = {'EIA': EIADataFetcher}:</code>
 Maps the provider name to the corresponding data fetching class.</p>
-<h4 id="method-fetch_data">Method: fetch_data()</h4>
+<h4 id="method-fetch_data"><strong>Method: fetch_data()</strong></h4>
 <p><code>def fetch_data(self, provider_name: str):</code>This method fetches data using the specified provider.</p>
-<h5 id="arguments">Arguments:</h5>
+<h5 id="arguments"><strong>Arguments:</strong></h5>
 <p><code>provider_name:</code> The name of the provider to fetch data from (e.g., "EIA").</p>
-<h5 id="description">Description:</h5>
+<h5 id="description"><strong>Description:</strong></h5>
 <p>Looks up the appropriate provider class based on the provided provider name. If the provider is not found, it logs an error and raises a ValueError.
 Creates an instance of the selected provider class, passing the configuration path.
 Calls the fetch_data method of the provider instance to perform the actual data fetching.</p>
 <h3 id="2-eiadatafetcher">2. <code>EIADataFetcher</code></h3>
 <p>The <code>EIADataFetcher</code> class handles the interaction with the EIA API, managing API requests and data retrieval.</p>
-<h4 id="initialization_1">Initialization</h4>
+<h4 id="initialization_1"><strong>Initialization</strong></h4>
 <p><code>def __init__(self, config_path: str):</code>
 Initializes the EIADataFetcher with a specified configuration path.</p>
-<h4 id="method-fetch_data_1">Method: fetch_data()</h4>
+<h4 id="method-fetch_data_1"><strong>Method: fetch_data()</strong></h4>
 <p><code>def fetch_data(self) -&gt; pd.DataFrame:</code>
 Fetches data from the EIA API, handling pagination as necessary.</p>
-<h5 id="description_1">Description</h5>
+<h5 id="description_1"><strong>Description</strong></h5>
 <ul>
 <li>Establishes a connection to the EIA API and constructs query parameters.</li>
 <li>Sends GET requests to the API and processes the responses.</li>
@@ -177,7 +177,7 @@ Fetches data from the EIA API, handling pagination as necessary.</p>
 <li>Handles pagination by iterating through the data until all available records are fetched.</li>
 <li>Raises exceptions if the response status is not successful or the data format is unexpected.</li>
 </ul>
-<h5 id="logging">Logging:</h5>
+<h5 id="logging"><strong>Logging:</strong></h5>
 <ul>
 <li>Logs the number of records fetched with each API call.</li>
 <li>Logs errors that occur during the data fetching process, ensuring traceability.</li>
